@@ -37,44 +37,45 @@ class IDLE {
         window = new sgl.Window();
         var pane = new sgl.VBox(window);
 
-        var menubar = new sgl.HBox(pane);
-        var choose_file = new sgl.Button(menubar, "Choose File");
-        choose_file.callback("command", function () {
+        var menubar = new sgl.MenuBar(window);
+        var file_menu = new sgl.Menu(menubar);
+
+        file_menu.add_item("Open File", function () {
             var file_name = sgl.ask_file_dialog({
                 "*.sp" = "Slowest program file"
             });
-            if (file_name !== null) {
+            try {
                 var stream = new io.TextInputStream(file_name);
                 var text = stream.read();
                 stream.close();
                 code_area.clear();
                 code_area.append_text(text);
+            } catch (e: io.IOException) {
+                println(e);
             }
         });
 
-        menubar.add(choose_file);
+        menubar.add_menu(file_menu, "File");
         code_area = new sgl.TextArea(pane);
 
-        //var cmd_bar = new sgl.HBox();
-        var run_btn = new sgl.Button(menubar, "Run");
+        var cmd_bar = new sgl.HBox(pane);
+        var run_btn = new sgl.Button(cmd_bar, "Run");
         run_btn.callback("command", function() {
             var text = code_area.get_text();
             eval(text);
         });
 
-        menubar.add(run_btn);
-
-        pane.add(menubar);
         pane.add(code_area);
 
-        //cmd_bar.add_child(run_btn);
-        //pane.add_child(cmd_bar);
+        cmd_bar.add(run_btn);
+        pane.add(cmd_bar);
 
         output_area = new sgl.TextArea(pane);
         pane.add(output_area);
 
         system.set_out(new TextAreaOutputStream(output_area));
 
+        window.set_menu(menubar);
         window.set_root(pane);
         window.show();
     }
