@@ -1,0 +1,2 @@
+var s = input("gs");
+println(s);
